new file:   assets/grad3.jpeg 	modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
             <div class="col col-stories">
               <div class="Student-Card">
                 <img
-                  src="Charles student success/image.png"
+                  src="assets/grad3.jpeg"
                   class="featured-student img-fluid"
                   alt="Graduates"
                 />
