modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
               <div class="Student-Card">
                 <img
                   src="assets/grad3.jpeg"
-                  class="featured-student img-fluid"
+                  class="featured-student"
                   alt="Graduates"
                 />
               </div>
