modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@
     </section>
     <!-- End: Success STories Section -->
 
-    <section></section>
+    <section id="testimonials"></section>
 
     <script src="index.js"></script>
   </body>
