modified:   index.css#	modified:   index.html 	modified:   jeff,success of stories/sucess stories.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ScholarLink</title>
-    <link rel="stylesheet" href="jeff,success of stories/style.css" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -744,7 +744,159 @@
     </section>
     <!-- End: Success STories Section -->
 
-    <section id="testimonials"></section>
+    <section id="testimonials">
+      <h1 class="testimonial-title">Our Students' Testimonials</h1>
+      <div class="wrapper">
+        <div class="center-line">
+          <a href="#" class="scroll-icon"><i class="fas fa-caret-up"></i></a>
+        </div>
+        <div class="row row-1">
+          <section>
+            <img
+              src="assets/grad1.jpeg"
+              alt="Testimonial Image"
+              class="testi-img"
+            />
+            <i class="icon fas fa-home"></i>
+            <div class="details">
+              <span class="testi-title">
+                <i
+                  class="fa1 fa fa-quote-left"
+                  aria-hidden="true"
+                  style="font-size: 36px; color: #0a2647"
+                ></i>
+              </span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed
+              qui veroes praesentium maiores, sint eos vero sapiente voluptas
+              debitis dicta dolore.
+            </p>
+            <div class="bottom">
+              <i>- Someone famous</i>
+              <span>1st May 2023</span>
+            </div>
+          </section>
+        </div>
+        <div class="row row-2">
+          <section>
+            <i class="icon fas fa-star"></i>
+            <div class="details">
+              <span class="testi-title">
+                <i
+                  class="fa1 fa fa-quote-left"
+                  aria-hidden="true"
+                  style="font-size: 36px; color: #0a2647"
+                ></i
+              ></span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed
+              qui veroes praesentium maiores, sint eos vero sapiente voluptas
+              debitis dicta dolore.
+            </p>
+            <div class="bottom">
+              <i>- Someone famous</i>
+              <span>1st May 2023</span>
+            </div>
+          </section>
+        </div>
+        <div class="row row-1">
+          <section>
+            <i class="icon fas fa-rocket"></i>
+            <div class="details">
+              <span class="testi-title">
+                <i
+                  class="fa1 fa fa-quote-left"
+                  aria-hidden="true"
+                  style="font-size: 36px; color: #0a2647"
+                ></i
+              ></span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed
+              qui veroes praesentium maiores, sint eos vero sapiente voluptas
+              debitis dicta dolore.
+            </p>
+            <div class="bottom">
+              <i>- Someone famous</i>
+              <span>1st May 2023</span>
+            </div>
+          </section>
+        </div>
+        <div class="row row-2">
+          <section>
+            <i class="icon fas fa-globe"></i>
+            <div class="details">
+              <span class="testi-title">
+                <i
+                  class="fa1 fa fa-quote-left"
+                  aria-hidden="true"
+                  style="font-size: 36px; color: #0a2647"
+                ></i
+              ></span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed
+              qui veroes praesentium maiores, sint eos vero sapiente voluptas
+              debitis dicta dolore.
+            </p>
+            <div class="bottom">
+              <i>- Someone famous</i>
+              <span>1st May 2023</span>
+            </div>
+          </section>
+        </div>
+        <div class="row row-1">
+          <section>
+            <i class="icon fas fa-paper-plane"></i>
+            <div class="details">
+              <span class="testi-title">
+                <i
+                  class="fa1 fa fa-quote-left"
+                  aria-hidden="true"
+                  style="font-size: 36px; color: #0a2647"
+                ></i
+              ></span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed
+              qui veroes praesentium maiores, sint eos vero sapiente voluptas
+              debitis dicta dolore.
+            </p>
+            <div class="bottom">
+              <i>- Someone famous</i>
+              <span>1st May 2023</span>
+            </div>
+          </section>
+        </div>
+        <div class="row row-2">
+          <section>
+            <i class="icon fas fa-map-marker-alt"></i>
+            <div class="details">
+              <span class="testi-title">
+                <i
+                  class="fa1 fa fa-quote-left"
+                  aria-hidden="true"
+                  style="font-size: 36px; color: #0a2647"
+                ></i
+              ></span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed
+              qui veroes praesentium maiores, sint eos vero sapiente voluptas
+              debitis dicta dolore.
+            </p>
+            <div class="bottom">
+              <i>- Someone famous</i>
+              <span>1st May 2023</span>
+            </div>
+          </section>
+        </div>
+      </div>
+    </section>
+
+    <section></section>
 
     <script src="index.js"></script>
   </body>
