--- a/jeff,success of stories/sucess stories.html
+++ b/jeff,success of stories/sucess stories.html
@@ -1,63 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--style-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>success stories</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="slider">
-        <input type="radio" name="toggle" id="btn-1" checked>
-        <input type="radio" name="toggle" id="btn-2">
-        <input type="radio" name="toggle" id="btn-3">
+      <input type="radio" name="toggle" id="btn-1" checked />
+      <input type="radio" name="toggle" id="btn-2" />
+      <input type="radio" name="toggle" id="btn-3" />
 
-        <div class="slider-controls">
-            <label for="btn-1"></label>
-            <label for="btn-2"></label>
-            <label for="btn-3"></label>
-        </div>
+      <div class="slider-controls">
+        <label for="btn-1"></label>
+        <label for="btn-2"></label>
+        <label for="btn-3"></label>
+      </div>
 
-        <ul class="slides">
-            <li class="slide">
-                <div class="slide-content">
-                    <h2 class="slide-title">story #1</h2>
-                    <p class="slide-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat dignissimos
-                        commodi eos totam perferendis possimus dolorem, deleniti vitae harum? Enim.</p>
-                </div>
-                <p class="slide-image">
-                    <img src="animalmemes14-5ae229b4ae9ab80037197fef.jpg" alt="stuff" width="320" height="240">
-                </p>
-            </li>
-            <li class="slide">
-                <div class="slide-content">
-                    <h2 class="slide-title">Story #2</h2>
-                    <p class="slide-text">Nisi ratione magni ea quis animi incidunt velit voluptate dolorem enim
-                        possimus, nam provident excepturi ipsam nihil molestiae minus delectus!</p>
-                    
-                </div>
-                <p class="slide-image">
-                    <img src="happy.jfif" alt="stuff" width="320" height="240">
-                </p>
-            </li>
-            <li class="slide">
-                <div class="slide-content">
-                    <h2 class="slide-title">Story #3</h2>
-                    <p class="slide-text">Quisquam quod ut quasi, vero obcaecati laudantium asperiores corporis ad
-                        atque. Expedita fugit dicta maxime vel doloribus sequi, facilis dignissimos.</p>
-                        
-                </div>
-                <p class="slide-image">
-                    <img src="nice 2.jpg" alt="stuff" width="320" height="240">
-                </p>
-            </li>
-        </ul>
+      <ul class="slides">
+        <li class="slide">
+          <div class="slide-content">
+            <h2 class="slide-title">story #1</h2>
+            <p class="slide-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+              dignissimos commodi eos totam perferendis possimus dolorem,
+              deleniti vitae harum? Enim.
+            </p>
+          </div>
+          <p class="slide-image">
+            <img
+              src="animalmemes14-5ae229b4ae9ab80037197fef.jpg"
+              alt="stuff"
+              width="320"
+              height="240"
+            />
+          </p>
+        </li>
+        <li class="slide">
+          <div class="slide-content">
+            <h2 class="slide-title">Story #2</h2>
+            <p class="slide-text">
+              Nisi ratione magni ea quis animi incidunt velit voluptate dolorem
+              enim possimus, nam provident excepturi ipsam nihil molestiae minus
+              delectus!
+            </p>
+          </div>
+          <p class="slide-image">
+            <img src="happy.jfif" alt="stuff" width="320" height="240" />
+          </p>
+        </li>
+        <li class="slide">
+          <div class="slide-content">
+            <h2 class="slide-title">Story #3</h2>
+            <p class="slide-text">
+              Quisquam quod ut quasi, vero obcaecati laudantium asperiores
+              corporis ad atque. Expedita fugit dicta maxime vel doloribus
+              sequi, facilis dignissimos.
+            </p>
+          </div>
+          <p class="slide-image">
+            <img src="nice 2.jpg" alt="stuff" width="320" height="240" />
+          </p>
+        </li>
+      </ul>
     </div>
 
-</body>
-
+    <section>
+      <div class="wrapper">
+        <div class="center-line">
+          <a href="#" class="scroll-icon"><i class="fas fa-caret-up"></i></a>
+        </div>
+        <div class="row row-1">
+          <section>
+            <i class="icon fas fa-home"></i>
+            <div class="details">
+              <span class="title">Title of Section 1</span>
+              <span>1st Jan 2021</span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed
+              qui veroes praesentium maiores, sint eos vero sapiente voluptas
+              debitis dicta dolore.
+            </p>
+            <div class="bottom">
+              <a href="#">Read more</a>
+              <i>- Someone famous</i>
+            </div>
+          </section>
+        </div>
+        <div class="row row-2">
+          <section>
+            <i class="icon fas fa-star"></i>
+            <div class="details">
+              <span class="title">Title of Section 2</span>
+              <span>2nd Jan 2021</span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed
+              qui veroes praesentium maiores, sint eos vero sapiente voluptas
+              debitis dicta dolore.
+            </p>
+            <div class="bottom">
+              <a href="#">Read more</a>
+              <i>- Someone famous</i>
+            </div>
+          </section>
+        </div>
+        <div class="row row-1">
+          <section>
+            <i class="icon fas fa-rocket"></i>
+            <div class="details">
+              <span class="title">Title of Section 3</span>
+              <span>3rd Jan 2021</span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed
+              qui veroes praesentium maiores, sint eos vero sapiente voluptas
+              debitis dicta dolore.
+            </p>
+            <div class="bottom">
+              <a href="#">Read more</a>
+              <i>- Someone famous</i>
+            </div>
+          </section>
+        </div>
+        <div class="row row-2">
+          <section>
+            <i class="icon fas fa-globe"></i>
+            <div class="details">
+              <span class="title">Title of Section 4</span>
+              <span>4th Jan 2021</span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed
+              qui veroes praesentium maiores, sint eos vero sapiente voluptas
+              debitis dicta dolore.
+            </p>
+            <div class="bottom">
+              <a href="#">Read more</a>
+              <i>- Someone famous</i>
+            </div>
+          </section>
+        </div>
+        <div class="row row-1">
+          <section>
+            <i class="icon fas fa-paper-plane"></i>
+            <div class="details">
+              <span class="title">Title of Section 5</span>
+              <span>5th Jan 2021</span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed
+              qui veroes praesentium maiores, sint eos vero sapiente voluptas
+              debitis dicta dolore.
+            </p>
+            <div class="bottom">
+              <a href="#">Read more</a>
+              <i>- Someone famous</i>
+            </div>
+          </section>
+        </div>
+        <div class="row row-2">
+          <section>
+            <i class="icon fas fa-map-marker-alt"></i>
+            <div class="details">
+              <span class="title">Title of Section 6</span>
+              <span>6th Jan 2021</span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed
+              qui veroes praesentium maiores, sint eos vero sapiente voluptas
+              debitis dicta dolore.
+            </p>
+            <div class="bottom">
+              <a href="#">Read more</a>
+              <i>- Someone famous</i>
+            </div>
+          </section>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
