new file:   index-dummy.css 	new file:   index-dummy.html 	new file:   index-dummy.js 	modified:   index.css 	modified:   index.html

--- a/index-dummy.html
+++ b/index-dummy.html
@@ -24,7 +24,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="index-dummy.css" />
     <!-- favicon  -->
     <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon" />
     <link
@@ -637,7 +637,7 @@
     <!-- Start: Success STories Section -->
 
     <section class="stories">
-      <div class="story-title text-center my-3 text-white">
+      <div class="story-title">
         <h1 class="Success">Our Student's Success Stories</h1>
         <h4 class="Guide">
           <em>
@@ -744,6 +744,160 @@
     </section>
     <!-- End: Success STories Section -->
 
-    <script src="index.js"></script>
+    <section id="testimonials">
+      <h1 class="testimonial-title">Our Students' Testimonials</h1>
+      <div class="wrapper">
+        <div class="center-line">
+          <a href="#" class="scroll-icon"><i class="fas fa-caret-up"></i></a>
+        </div>
+        <div class="row row-1">
+          <section>
+            <img
+              src="assets/grad1.jpeg"
+              alt="Testimonial Image"
+              class="testi-img"
+            />
+            <i class="icon fas fa-home"></i>
+            <div class="details">
+              <span class="testi-title">
+                <i
+                  class="fa1 fa fa-quote-left"
+                  aria-hidden="true"
+                  style="font-size: 36px; color: #0a2647"
+                ></i>
+              </span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed
+              qui veroes praesentium maiores, sint eos vero sapiente voluptas
+              debitis dicta dolore.
+            </p>
+            <div class="bottom">
+              <i>- Someone famous</i>
+              <span>1st May 2023</span>
+            </div>
+          </section>
+        </div>
+        <div class="row row-2">
+          <section>
+            <i class="icon fas fa-star"></i>
+            <div class="details">
+              <span class="testi-title">
+                <i
+                  class="fa1 fa fa-quote-left"
+                  aria-hidden="true"
+                  style="font-size: 36px; color: #0a2647"
+                ></i
+              ></span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed
+              qui veroes praesentium maiores, sint eos vero sapiente voluptas
+              debitis dicta dolore.
+            </p>
+            <div class="bottom">
+              <i>- Someone famous</i>
+              <span>1st May 2023</span>
+            </div>
+          </section>
+        </div>
+        <div class="row row-1">
+          <section>
+            <i class="icon fas fa-rocket"></i>
+            <div class="details">
+              <span class="testi-title">
+                <i
+                  class="fa1 fa fa-quote-left"
+                  aria-hidden="true"
+                  style="font-size: 36px; color: #0a2647"
+                ></i
+              ></span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed
+              qui veroes praesentium maiores, sint eos vero sapiente voluptas
+              debitis dicta dolore.
+            </p>
+            <div class="bottom">
+              <i>- Someone famous</i>
+              <span>1st May 2023</span>
+            </div>
+          </section>
+        </div>
+        <div class="row row-2">
+          <section>
+            <i class="icon fas fa-globe"></i>
+            <div class="details">
+              <span class="testi-title">
+                <i
+                  class="fa1 fa fa-quote-left"
+                  aria-hidden="true"
+                  style="font-size: 36px; color: #0a2647"
+                ></i
+              ></span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed
+              qui veroes praesentium maiores, sint eos vero sapiente voluptas
+              debitis dicta dolore.
+            </p>
+            <div class="bottom">
+              <i>- Someone famous</i>
+              <span>1st May 2023</span>
+            </div>
+          </section>
+        </div>
+        <div class="row row-1">
+          <section>
+            <i class="icon fas fa-paper-plane"></i>
+            <div class="details">
+              <span class="testi-title">
+                <i
+                  class="fa1 fa fa-quote-left"
+                  aria-hidden="true"
+                  style="font-size: 36px; color: #0a2647"
+                ></i
+              ></span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed
+              qui veroes praesentium maiores, sint eos vero sapiente voluptas
+              debitis dicta dolore.
+            </p>
+            <div class="bottom">
+              <i>- Someone famous</i>
+              <span>1st May 2023</span>
+            </div>
+          </section>
+        </div>
+        <div class="row row-2">
+          <section>
+            <i class="icon fas fa-map-marker-alt"></i>
+            <div class="details">
+              <span class="testi-title">
+                <i
+                  class="fa1 fa fa-quote-left"
+                  aria-hidden="true"
+                  style="font-size: 36px; color: #0a2647"
+                ></i
+              ></span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed
+              qui veroes praesentium maiores, sint eos vero sapiente voluptas
+              debitis dicta dolore.
+            </p>
+            <div class="bottom">
+              <i>- Someone famous</i>
+              <span>1st May 2023</span>
+            </div>
+          </section>
+        </div>
+      </div>
+    </section>
+
+    <section></section>
+
+    <script src="index-dummy.js"></script>
   </body>
 </html>
