new file:   assets/grad-bg.png 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
     <!-- end: Gallery Section -->
 
     <!-- start: What We Provide Section -->
-    <section>
+    <section id="services">
       <div class="container what-we-provide">
         <h1 class="title">What We Provide</h1>
         <div class="wrapper">
