modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -455,6 +455,18 @@
           <div class="line"></div>
           <div class="card">
             <span class="dot"></span>
+            <h3>Mentorship</h3>
+            <p>
+              ScholarLink provides personalized mentorship to underprivileged
+              high school students, connecting them with college mentors who
+              offer guidance and support with academic and career planning,
+              college applications, and financial aid. Our mentorship program is
+              designed to empower students and help them achieve their goals, no
+              matter what challenges they may face.
+            </p>
+          </div>
+          <div class="card">
+            <span class="dot"></span>
             <h3>Scholarship Grants</h3>
             <p>
               Our platform offers comprehensive and personalized support to help
@@ -464,14 +476,7 @@
               education and achieve their academic goals.
             </p>
           </div>
-          <div class="card">
-            <span class="dot"></span>
-            <h3>Mentorship</h3>
-            <p>
-              Our mentorship program is designed to empower students and help
-              them achieve their goals, no matter what challenges they may face.
-            </p>
-          </div>
+
           <div class="card">
             <span class="dot"></span>
             <h3>Academic and Career Planning</h3>
