modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -627,13 +627,15 @@
             font-family: 'Rubik';
           "
         >
-          Unlock Your Future and Achieve More with Our Exceptional Mentors!
+          Explore our mentor profiles now and start your journey to success!
+          <br />
+          Connect with our mentors today.
         </h3>
         <a
           href="#"
           class="btn cta-mentor"
-          style="text-align: center; margin-bottom: 5%"
-          >View All</a
+          style="text-align: center; margin-bottom: 5%; font-size: 22px"
+          >CONNECT</a
         >
       </div>
     </section>
@@ -745,6 +747,26 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="container text-center mentor-footer">
+        <h3
+          style="
+            color: white;
+            text-align: center;
+            font-weight: 500;
+            margin-top: 2%;
+            font-family: 'Rubik';
+          "
+        >
+          Take the first step towards your future with ScholarLink. <br />
+          Sign up today and discover a world of opportunities!
+        </h3>
+        <a
+          href="#"
+          class="btn cta-mentor"
+          style="text-align: center; margin-bottom: 5%; font-size: 22px"
+          >SIGN-UP</a
+        >
       </div>
     </section>
     <!-- End: Success STories Section -->
