modified:   index.html

--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
           href="#"
           class="btn cta-mentor"
           style="text-align: center; margin-bottom: 5%; font-size: 22px"
-          >CONNECT</a
+          >Connect Now</a
         >
       </div>
     </section>
@@ -765,7 +765,7 @@
           href="#"
           class="btn cta-mentor"
           style="text-align: center; margin-bottom: 5%; font-size: 22px"
-          >SIGN-UP</a
+          >Sign-Up Now</a
         >
       </div>
     </section>
