modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -641,12 +641,7 @@
           <br />
           Connect with our mentors today.
         </h3>
-        <a
-          href="#"
-          class="btn cta-mentor"
-          style="text-align: center; margin-bottom: 5%; font-size: 22px"
-          >Connect Now</a
-        >
+        <a href="#" class="btn cta-featured-mentor">Connect Now</a>
       </div>
     </section>
     <!-- End: Feature Mentor Section -->
@@ -759,25 +754,12 @@
         </div>
       </div>
 
-      <div class="container text-center mentor-footer">
-        <h3
-          style="
-            color: white;
-            text-align: center;
-            font-weight: 500;
-            margin-top: 2%;
-            font-family: 'Rubik';
-          "
-        >
+      <div class="container text-center success-footer">
+        <h3>
           Take the first step towards your future with ScholarLink. <br />
           Sign up today and discover a world of opportunities!
         </h3>
-        <a
-          href="#"
-          class="btn cta-mentor"
-          style="text-align: center; margin-bottom: 5%; font-size: 22px"
-          >Sign-Up Now</a
-        >
+        <a href="#" class="btn cta-success-story">Sign-Up Now</a>
       </div>
     </section>
     <!-- End: Success STories Section -->
