modified:   How_It_Works-dummy.html 	modified:   Our_Story-dummy.html

--- a/How_It_Works-dummy.html
+++ b/How_It_Works-dummy.html
@@ -166,7 +166,7 @@
   <!-- Start: Footer   -->
   <section></section>
   <!-- End: Footer  -->
-
+<script src="index-dummy.js"></script>
   <script src="How it works-dummy.js"></script>
 </body>
 
