modified:   Our_Story-dummy.html

--- a/Our_Story-dummy.html
+++ b/Our_Story-dummy.html
@@ -340,6 +340,7 @@
   <!-- Start:Footer -->
   <Section></Section>
   <!-- End:Footer -->
+  <script src="index-dummy.js"></script>
   <script src="Our Story-dummy.js"></script>
 </body>
 
